--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,10 @@
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
   background: #0f0f0f;
+  height: 100vh;
   overflow: hidden;
 }
 
@@ -71,9 +70,8 @@ body::after {
 
 #root {
   width: 100%;
+  min-height: 100vh;
   height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
